--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body,
+html {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+body {
+  background-color: lightblue;
+}
